index.css
:root {
  /* colors */
  --color-red: 0, 78%, 62%;
  --color-cyan: 180, 62%, 55%;
  --color-orange: 34, 97%, 64%;
  --color-blue: 212, 86%, 64%;
  --color-dark-blue: 234, 12%, 34%;
  --color-grayish-blue: 229, 6%, 66%;
  --color-light-gray: 0, 0%, 98%;
  /* font-sizes */
  --fs-400: clamp(1rem, 3vw, 2.5rem);
  --fs-300: clamp(0.8rem, 1vw, 1.1rem);
}

/* ----------------------------------------------------- 
------------------------------------------------------------------ Universal / Utitlity Classes
-------------------------------------------------------- */

body {
  font-family: "Poppins", sans-serif;
  background-color: hsl(var(--color-light-gray));
}
.container {
  display: grid;
  width: 95%;
  max-width: 1250px;
  margin: 0 auto;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}
h1,
h2,
h3,
p {
  padding: 0;
  margin: 0;
  line-height: 1.3;
}

.flow > *:where(:not(:first-child)) {
  margin-block-start: var(--flow-gap, 1.5rem);
}
.flow > *:last-child {
  margin-block-end: var(--flow-end-gap, 4rem);
}

/* font-utility */
.fs-600 {
  font-size: var(--fs-600);
}
.fs-400 {
  font-size: var(--fs-400);
}
.fs-300 {
  font-size: var(--fs-300);
}
.fs-200 {
  font-size: var(--fs-200);
}

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* ----------------------------------------------------- 
------------------------------------------------------------------ Title Section
-------------------------------------------------------- */
header {
  margin-top: 1rem;
  display: grid;
  justify-items: center;
}
header > h1 {
  color: hsl(var(--color-dark-blue));
  font-weight: 200;
}
.stand-out {
  display: block;
  color: hsl(var(--color-dark-blue));
  font-weight: 600;
}
header > p {
  color: hsl(var(--color-grayish-blue));
  max-width: 50ch;
  text-align: center;
  margin: 0 auto;
  display: flex;
}

/* ----------------------------------------------------- 
------------------------------------------------------------------ Content Section
-------------------------------------------------------- */

.card {
  display: flex;
  gap: 1rem;
  flex-direction: column;
  padding: clamp(1rem, 5vw, 2rem);
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0 5px 10px hsl(var(--color-blue), 0.1);
}
.card > img {
  display: block;
  max-width: 100px;
  width: 20%;
  align-self: flex-end;
}
.card > h2 {
  color: hsl(var(--color-dark-blue));
}
.card > p {
  color: hsl(var(--color-grayish-blue));
  line-height: 2;
}
.card:first-child {
  border-top: 3px solid hsl(var(--color-cyan));
}
.two-cards > :first-child {
  border-top: 3px solid hsl(var(--color-red)) !important;
}
.card:nth-of-type(2) {
  border-top: 3px solid hsl(var(--color-orange));
}
.card:nth-of-type(3) {
  border-top: 3px solid hsl(var(--color-blue));
}

@media (min-width: 875px) {
  .container {
    grid-template-areas:
      "title"
      "cards";
  }
  header {
    grid-area: title;
  }
  .card-container {
    display: grid;
    grid-area: cards;
    place-items: center;
    gap: 2.5rem;
    grid-template-columns: 1fr 1fr 1fr;
  }

  .card-container > .two-cards {
    display: grid;
    --flow-gap: 0;
    --flow-end-gap: 0;
    gap: 2.5rem;
  }
}

